# colorfilters

./: .gitignore  LICENSE  README.md  cspaceSliders.py  cspaceThreshImg.py  example.py  pyproject.toml  setup.py
colorfilters/: __init__.py  __main__.py  app.py  colorfilters.py
